# VTOL_vms

./: .gitignore  BOM.md  CLAUDE.md  CMakeLists.txt  README.md  pyproject.toml
config/: channel_map.yaml  pid_gains.yaml  vehicle.yaml
docs/: wiring.md
scripts/: deploy.sh  setup_rt.sh
src/bindings/: shm_interface.h
src/control/include/: attitude.h  control_loop.h  mixer.h  pid.h
src/control/src/: attitude.c  control_loop.c  ipc_shm.c  mixer.c  pid.c
src/hal/include/: bno085.h  gpio.h  pwm_output.h  rc_input.h
src/hal/src/: bno085.c  hal_init.c  pwm_output.c  rc_input.c
src/vms/: config.py  flight_mode.py  ipc.py  main.py  safety.py  telemetry.py
tests/: test_config.py  test_flight_mode.py  test_mixer.c  test_pid.c
tools/: calibrate_esc.py  calibrate_imu.py  motor_test.py  rc_monitor.py  servo_test.py
